--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+agents/
+
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,python,macos
 
